force-app/main/default/objects/OpportunityLineItem/fields/md_comm_pack__Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>md_comm_pack__Platform_Key__c</fullName>
    <description>MoveData Platform Key for an Opportunity Product. Used to link with incoming notifications.</description>
    <externalId>true</externalId>
    <label>Platform Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>