force-app/main/default/objects/OpportunityLineItem/fields/webkul_wws__Woo_Product_Varient__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Product_Varient__c</fullName>
    <label>Product Variant</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>