force-app/main/default/objects/OpportunityLineItem/fields/webkul_wws__Woo_Variant_SKU__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Variant_SKU__c</fullName>
    <label>Woo Variant SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>